tests/errors/semantic/blocking/UNRECOGNISED_FUNCTION_CALL.py
# missing 1 required positional argument
# pylint: disable=missing-function-docstring, missing-module-docstring
from numpy import zeros

a = zeros()
